--- a/vueHX/vue_lesson01/01vue的起步与插值.html
+++ b/vueHX/vue_lesson01/01vue的起步与插值.html
@@ -17,6 +17,7 @@
         <h3>{{ {id:1} }}</h3>
         <h3>{{ 1>2? '真的': '假的' }}</h3>
         <h3>{{ txt.split('').reverse().join('') }}</h3>
+        <h2>{{ getContent() }}</h2>
     </div>
 
     <!-- 引包 -->
@@ -25,12 +26,19 @@
     //  console.log(Vue);
 
     //初始化
-    const vm = new Vue({
+    var vm = new Vue({
         el:'#app',
         data:{
             msg:'hello vue',
-            txt: "hello"
+            txt: "hello",
+            msg2: "content"
+        },
+        methods:{
+            getContent(){
+                return this.msg +","+ this.msg2;
+            }
         }
+
     })
 
     </script>
